Changelog
=========


1.2.3 (unreleased)
------------------

- Nothing changed yet.


1.2.2 (2015-03-13)
------------------

- Remove too strict six version pinning.
  six is pinned in Plone 4.3 KGS and newer.
  For older Plone versions it should be pinned down, e.g. to `1.4.0`.
  [jone]


1.2.1 (2014-12-14)
------------------

- Retain Plone KGS compatibility by pinning oauth2client and six dependencies.
  [jone]


1.2.0 (2014-06-05)
------------------

- Masstranslate: add support for Google Oauth --noauth_local_webserver.
  This option is useful when there is no local browser (e.g. when
  connected through ssh to a server).
  [jone]


1.1.1 (2014-03-05)
------------------

- i18nbuild: Remove "Domain", "Language-Code" and "Language-Name" headers.
  Plone does not need those headers, it takes informations from the path.
  The headers are usually not set correctly, so we just remove them.
  [jone]


1.1.0 (2014-03-05)
------------------

- Implement new bin/i18n-build recipe and script.
  [jone]

- Rename bin/translations to bin/masstranslate.
  [jone]


1.0.2 (2014-01-31)
------------------

- Fix previous brown bag releases: make buildout recipe work.
  [jone]


1.0.1 (2014-01-31)
------------------

- Fix missing distribution buildout error.
  [jone]


1.0.0 (2014-01-31)
------------------

- Initial implementation.
  [jone]