@@ -5,7 +5,8 @@ Changelog
 1.2.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Ignore no longer existing translations.
+  [phgross]
 
 
 1.2.2 (2015-03-13)
